--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,16 @@ services:
     depends_on:
       - rabbitmq
 
+  user-service:
+    build:
+      context: ./user-service
+    ports:
+      - "9002:3000"
+    depends_on:
+      - rabbitmq
+    networks:
+      - ecommerce-network
+
 networks:
   ecommerce-network:
     driver: bridge
