add new service

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "user-service"]
 	path = user-service
 	url = git@github.com:mohammadalipour/user-service.git
+[submodule "shopping-service"]
+	path = user-service
+	url = git@github.com:mohammadalipour/shopping-service.git
