--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   rabbitmq:
     image: "rabbitmq:3-management"
@@ -14,55 +12,94 @@ services:
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
 
-  api-gateway:
+  setup:
+    profiles:
+      - setup
     build:
-      context: ./api-gateway
-    ports:
-      - "8080:8080"
+      context: elk/setup
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    init: true
+    volumes:
+      - ./elk/setup/entrypoint.sh:/entrypoint.sh:ro,Z
+      - ./elk/setup/lib.sh:/lib.sh:ro,Z
+      - ./elk/setup/roles:/roles:ro,Z
+    environment:
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
     networks:
       - ecommerce-network
     depends_on:
-      - rabbitmq
+      - elasticsearch
 
-  product-service:
+  elasticsearch:
     build:
-      context: ./product-service
+      context: elk/elasticsearch
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./elk/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
+      - elk_elasticsearch:/usr/share/elasticsearch/data:Z
     ports:
-      - "8081:8081"
+      - 9200:9200
+      - 9300:9300
+    environment:
+      node.name: elasticsearch
+      ES_JAVA_OPTS: -Xms512m -Xmx512m
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      discovery.type: single-node
     networks:
       - ecommerce-network
-    depends_on:
-      - rabbitmq
+    restart: unless-stopped
 
-  user-service:
+  kibana:
     build:
-      context: ./user-service
+      context: elk/kibana
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./elk/kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
     ports:
-      - "8083:3000"
-    depends_on:
-      - rabbitmq
+      - "5601:5601"
+    environment:
+      KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
     networks:
       - ecommerce-network
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
 
-  shopping-service:
+  apm-server:
     build:
-      context: ./shopping-service
-    ports:
-      - "8084:8084"
+      context: elk/apm-server
     depends_on:
-      - rabbitmq
+      - elasticsearch
+      - kibana
+    cap_add: [ "CHOWN", "DAC_OVERRIDE", "SETGID", "SETUID" ]
+    cap_drop: [ "ALL" ]
+    ports:
+      - "8200:8200"
     networks:
       - ecommerce-network
-
-  inventory-service:
-    build:
-      context: ./inventory-service
-    ports:
-      - "8085:8085"
-    depends_on:
-      - rabbitmq
-    networks:
-      - ecommerce-network
+    environment:
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+    command: >
+      apm-server -e
+        -E apm-server.rum.enabled=true
+        -E setup.kibana.host=kibana:5601
+        -E apm-server.secret_token=${ELASTIC_APM_SECRET_TOKEN}
+        -E setup.template.settings.index.number_of_replicas=0
+        -E apm-server.kibana.enabled=true
+        -E apm-server.kibana.host=kibana:5601
+        -E output.elasticsearch.hosts=["elasticsearch:9200"]
+        -E output.elasticsearch.username=elastic
+        -E output.elasticsearch.password=${ELASTIC_PASSWORD}
+        -E apm-server.read_timeout=60s
+        -E apm-server.write_timeout=60s
+    healthcheck:
+      interval: 10s
+      retries: 12
+      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:8200/
 
 networks:
   ecommerce-network:
@@ -70,4 +107,6 @@ networks:
 
 volumes:
   rabbitmq_data:
+    driver: local
+  elk_elasticsearch:
     driver: local
