add elk service

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,5 +14,5 @@
 	path = inventory-service
 	url = git@github.com:mohammadalipour/inventory-service.git
 [submodule "elk-service"]
-	path = elk
+	path = elk-service
 	url = git@github.com:mohammadalipour/elk-service.git
