--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
     profiles:
       - setup
     build:
-      context: elk/setup
+      context: elk-service/setup
       args:
         ELASTIC_VERSION: ${ELASTIC_VERSION}
     init: true
     volumes:
-      - ./elk/setup/entrypoint.sh:/entrypoint.sh:ro,Z
-      - ./elk/setup/lib.sh:/lib.sh:ro,Z
-      - ./elk/setup/roles:/roles:ro,Z
+      - ./elk-service/setup/entrypoint.sh:/entrypoint.sh:ro,Z
+      - ./elk-service/setup/lib.sh:/lib.sh:ro,Z
+      - ./elk-service/setup/roles:/roles:ro,Z
     environment:
       ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
       KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
@@ -34,11 +34,11 @@ services:
 
   elasticsearch:
     build:
-      context: elk/elasticsearch
+      context: elk-service/elasticsearch
       args:
         ELASTIC_VERSION: ${ELASTIC_VERSION}
     volumes:
-      - ./elk/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
+      - ./elk-service/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
       - elk_elasticsearch:/usr/share/elasticsearch/data:Z
     ports:
       - 9200:9200
@@ -54,11 +54,11 @@ services:
 
   kibana:
     build:
-      context: elk/kibana
+      context: elk-service/kibana
       args:
         ELASTIC_VERSION: ${ELASTIC_VERSION}
     volumes:
-      - ./elk/kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
+      - ./elk-service/kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
     ports:
       - "5601:5601"
     environment:
@@ -71,7 +71,7 @@ services:
 
   apm-server:
     build:
-      context: elk/apm-server
+      context: elk-service/apm-server
     depends_on:
       - elasticsearch
       - kibana
